# ATS-AI

./: .env.example  .gitignore  Makefile  pyproject.toml
contracts/schema/: engine_signal.json  market_state.json  mle_output.json  portfolio_state.json
docs/: STATE.md
src/: __init__.py
src/core/: __init__.py
src/core/contracts/: __init__.py  validators.py
src/core/domain/: __init__.py  market_state.py  mle_output.py  portfolio_state.py  position.py  regime.py  signal.py  trade.py  units.py
src/core/math/: __init__.py  compounding.py  effective_prices.py  numerical_safeguards.py
src/drp/: __init__.py  state_machine.py
src/gatekeeper/: __init__.py
src/gatekeeper/gates/: __init__.py  (+11 more)
tests/: __init__.py
tests/unit/: __init__.py  test_compounding.py  test_domain_models.py  test_dqs_system.py  test_drp_state_machine.py  test_effective_prices.py  test_gate_00.py  test_gate_01.py  test_gate_02.py  test_gate_03.py  test_gate_04.py  test_gate_05.py  test_gate_06.py  test_gate_07.py  test_gate_08.py  test_gate_09.py  test_gate_10.py  test_json_schema_contracts.py  test_numerical_safeguards.py  test_pydantic_state_models.py  test_units_sanity.py
Промпты/: промпт_на_начало_разработки_по_ТЗ.md  промпт_на_продолжение_разработки_по_ТЗ.md
Результаты итераций/0/: README.md
Результаты итераций/1/: STATE.md
Результаты итераций/2/: ITERATION_2_SUMMARY.md  STATE.md
Результаты итераций/3/: ITERATION_3_SUMMARY.md  STATE.md  test_results_iteration_3.txt
ТЗ/: ATS-AI_v3_30.md  project_structure.html  промпт.md
ТЗ/Промпты/: промпт_на_сверку_и_доработку_структуры.md
